--- a/.github/workflows/nano_notebooks_tests.yml
+++ b/.github/workflows/nano_notebooks_tests.yml
@@ -4,9 +4,9 @@ name: Nano Unit Tests for Notebooks
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ test-workflow ]
+    branches: [ main ]
   pull_request:
-    branches: [ test-workflow ]
+    branches: [ main ]
     paths:
       - 'python/nano/**'
       - '.github/workflows/nano_notebooks_tests.yml'
