--- a/python/nano/notebooks/pytorch/requirements.txt
+++ b/python/nano/notebooks/pytorch/requirements.txt
@@ -1,6 +1,6 @@
 pytest==7.1.2
 nbmake==1.3.0
-torch_ipex==1.9.0
+torch_ipex==1.9.0 @ https://software.intel.com/ipex-whl-stable
 lightning-bolts==0.5.0
 neural-compressor==1.11
 onnxruntime==1.10.0
