--- a/.github/workflows/nano_notebooks_tests.yml
+++ b/.github/workflows/nano_notebooks_tests.yml
@@ -37,7 +37,7 @@ jobs:
           python -m pip install --upgrade setuptools==58.0.4
           python -m pip install --upgrade wheel
 
-      - name: Run notebooks trainer PyTorch unit tests
+      - name: Run notebooks PyTorch unit tests
         shell: bash
         run: |
           $CONDA/bin/conda create -n notebooks-trainer-pytorch -y python==3.7.10 setuptools=58.0.4
@@ -46,7 +46,7 @@ jobs:
           bash python/nano/dev/build_and_install.sh linux default false pytorch
           source bigdl-nano-init
           pip install -r python/nano/notebooks/pytorch/requirements.txt
-          bash python/nano/test/run-nano-notebooks-trainer-pytorch-tests.sh
+          bash python/nano/test/run-nano-notebooks-pytorch-tests.sh
           source $CONDA/bin/deactivate
           $CONDA/bin/conda remove -n notebooks-pytorch --all
         env:
