--- a/.github/workflows/nano_unit_tests.yml
+++ b/.github/workflows/nano_unit_tests.yml
@@ -189,7 +189,9 @@ jobs:
           bash python/nano/dev/build_and_install.sh linux default false pytorch
           pip install pytest
           if [ ! -z "${{matrix.pytorch-version}}" ]; then
-            pip install ${{matrix.pytorch-version}} 
+            requirements=${{matrix.pytorch-version}}
+            pip install ${requirements[0]} ${requirements[1]} -f https://download.pytorch.org/whl/torch_stable.html
+            pip install ${requirements[2]} -f https://software.intel.com/ipex-whl-stable
           fi
           source bigdl-nano-init
           bash python/nano/test/run-nano-pytorch-tests-ipex.sh
