--- a/.github/workflows/nano_unit_tests.yml
+++ b/.github/workflows/nano_unit_tests.yml
@@ -161,7 +161,7 @@ jobs:
         pytorch-version: [
           "torch==1.11.0+cpu torchvision==0.12.0+cpu intel_extension_for_pytorch==1.11.0",
           "torch==1.10.0+cpu torchvision==0.11.0+cpu intel_extension_for_pytorch==1.10.0",
-          "torch==1.9.0+cpu torchvision==0.10.0+cpu intel_extension_for_pytorch==1.9.0"
+          "torch==1.9.0+cpu torchvision==0.10.0+cpu torch_ipex==1.9.0"
           # "torch==1.10.1+cpu torchvision==0.11.2+cpu",
           # ""
           ]
@@ -189,7 +189,7 @@ jobs:
           bash python/nano/dev/build_and_install.sh linux default false pytorch
           pip install pytest
           if [ ! -z "${{matrix.pytorch-version}}" ]; then
-            requirements=${{matrix.pytorch-version}}
+            requirements=(${{matrix.pytorch-version}})
             pip install ${requirements[0]} ${requirements[1]} -f https://download.pytorch.org/whl/torch_stable.html
             pip install ${requirements[2]} -f https://software.intel.com/ipex-whl-stable
           fi
