--- a/.github/workflows/nano_unit_tests.yml
+++ b/.github/workflows/nano_unit_tests.yml
@@ -165,6 +165,9 @@ jobs:
           # "torch==1.10.1+cpu torchvision==0.11.2+cpu",
           # ""
           ]
+        include:
+          - extra: "psutil"
+            pytorch-version: "torch==1.10.0+cpu torchvision==0.11.0+cpu intel_extension_for_pytorch==1.10.0"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -192,6 +195,9 @@ jobs:
             requirements=(${{matrix.pytorch-version}})
             pip install ${requirements[0]} ${requirements[1]} -f https://download.pytorch.org/whl/torch_stable.html
             pip install ${requirements[2]} -f https://software.intel.com/ipex-whl-stable
+            if [ ! -z "${{matrix.extra}}" ]; then
+               pip install ${{matrix.extra}}
+            fi
           fi
           source bigdl-nano-init
           bash python/nano/test/run-nano-pytorch-tests-ipex.sh
